--- a/lib/opencog.conf
+++ b/lib/opencog.conf
@@ -65,7 +65,7 @@ SCM_PRELOAD           = scm/type_constructors.scm,
 #PYTHON_EXTENSION_DIRS  = 
 
 # Run these python modules on start up
-#PYTHON_PRELOAD = my_module1, my_module2
+PYTHON_PRELOAD = pyshell
 
 # IMPORTANT!
 # Database login credentials. Change these to reflect your actual setup!
