--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,7 +22,7 @@ PROJECT(opencog)
 # SET(CMAKE_BUILD_TYPE Release)
 
 # uncomment to build in debug mode
-# SET(CMAKE_BUILD_TYPE Debug)
+ SET(CMAKE_BUILD_TYPE Debug)
 
 # uncomment to be in coverage testing mode
 # SET(CMAKE_BUILD_TYPE Coverage)
