--- a/lib/opencog.conf
+++ b/lib/opencog.conf
@@ -46,15 +46,15 @@ SCM_PRELOAD           = scm/type_constructors.scm,
                         scm/utilities.scm,
                         scm/apply.scm,
                         scm/file-utils.scm, 
-                        scm/debug.scm,
-                        nlp/scm/type-definitions.scm, 
-                        nlp/scm/config.scm, 
-                        nlp/scm/file-utils.scm,
-                        nlp/scm/nlp-utils.scm,
-                        nlp/scm/disjunct-list.scm,
-                        nlp/scm/processing-utils.scm,
-                        reasoning/pln/scm/pln-rules.scm,
-                        embodiment/scm/type_constructors.scm
+                        scm/debug.scm
+                        #nlp/scm/type-definitions.scm, 
+                        #nlp/scm/config.scm, 
+                        #nlp/scm/file-utils.scm,
+                        #nlp/scm/nlp-utils.scm,
+                        #nlp/scm/disjunct-list.scm,
+                        #nlp/scm/processing-utils.scm,
+                        #reasoning/pln/scm/pln-rules.scm,
+                        #embodiment/scm/type_constructors.scm
 
 # Uncomment if Python extensions are not stored in these locations,
 # or the binary and source directories:
