Made a new 3D pathfinder work with the system.

--- a/opencog/embodiment/Learning/LearningServer/CMakeLists.txt
+++ b/opencog/embodiment/Learning/LearningServer/CMakeLists.txt
@@ -2,17 +2,30 @@ IF(COMMAND cmake_policy)
       CMAKE_POLICY(SET CMP0003 NEW)
 ENDIF(COMMAND cmake_policy)
 
-ADD_LIBRARY(lslib
+SET(LSLIB_SOURCE_FILES
+        LearningServer
 	LS
 	LSMocky
 	SleepAgent
 	ImitationLearningAgent
 )
 
-TARGET_LINK_LIBRARIES (lslib
+ADD_LIBRARY(lslib
+${LSLIB_SOURCE_FILES} 
+)
+
+SET(lslib_LINK_LIBS
     PetaverseMOSES
     comboreduct
     server
+)
+
+IF (HAVE_ZMQ)
+  SET(lslib_LINK_LIBS ${lslib_LINK_LIBS} zmq)
+ENDIF (HAVE_ZMQ)
+
+TARGET_LINK_LIBRARIES (lslib
+    ${lslib_LINK_LIBS}
 )
 
 SET(SERVER_LINK_LIBS
