--- a/opencog/embodiment/dev_embodiment.conf.example
+++ b/opencog/embodiment/dev_embodiment.conf.example
@@ -51,6 +51,24 @@ LS_ID                           = LS
 LS_IP                           = 127.0.0.1
 LS_PORT                         = 16314
 
+# For the new learningServer for Unity embodiment, not for the old pet Park
+LEARNING_SERVER_PULL_IP         = 127.0.0.1
+LEARNING_SERVER_PULL_PORT       = 16501
+
+LEARNING_SERVER_PUSH_IP         = 127.0.0.1
+LEARNING_SERVER_PUSH_PORT       = 16502
+
+ENABLE_STATICS_MAP_LEARNING     = true
+
+# For zmq based learning server, when the LS is running in the different machine from the OAC, 
+# please asign the LEARNING_SERVER_PULL_IP & LEARNING_SERVER_PUSH_IP as the Ip of the machine on which the LS is running 
+# because the OAC will push message to LEARNING_SERVER_PUSH_IP
+LEARNING_SERVER_PULL_IP         = 127.0.0.1
+LEARNING_SERVER_PULL_PORT       = 16500
+
+LEARNING_SERVER_PUSH_IP         = 127.0.0.1
+LEARNING_SERVER_PUSH_PORT       = 16501
+
 # ServerSocket port range for OACs 
 MIN_OAC_PORT                    = 16326 
 MAX_OAC_PORT                    = 16340 
@@ -114,7 +132,7 @@ ATOM_SPACE_DUMP = atomSpace.dump
 PSI_MODULATORS =      Activation, Resolution, SecuringThreshold, SelectionThreshold 
 
 # Demands currently available in unity world
-PSI_DEMANDS = Energy, Integrity, Certainty, Competence, Affiliation
+PSI_DEMANDS = Energy #, Integrity, Certainty , Competence, Affiliation
 # Complete list of demands (all availabe in multiverse world)
 #PSI_DEMANDS = Energy, Water, Integrity, Affiliation, Certainty, Competence
 #PSI_DEMANDS = TestEnergy
